--- a/app/src/main/res/layout/activity_registro_proveedor.xml
+++ b/app/src/main/res/layout/activity_registro_proveedor.xml
@@ -158,12 +158,70 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Dirección"
+                        android:text="Dir"
+                        android:hint="Dirección (Presione el boton Mapear)"
                         android:id="@+id/ProveedorDireccion"
                         android:inputType="text">
 
                     </com.google.android.material.textfield.TextInputEditText>
                 </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text="Latitud"
+                        android:layout_height="wrap_content"/>
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:hint="lat"
+                        android:id="@+id/lat"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_marginLeft="5dp"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text="Longitud"
+                        android:layout_height="wrap_content"/>
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:hint="lon"
+                        android:id="@+id/lon"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+        </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:padding="20dp"
+                android:layout_height="wrap_content">
+                <Button
+                    android:layout_width="match_parent"
+                    android:text="Mapear"
+                    android:id="@+id/btnMapear"
+                    android:padding="10dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
 
             <LinearLayout
