--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#fff</color>
     <color name="colorPrimaryDark">#fff</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#5bbd00</color>
     <color name="colorBlanco">#FFFFFF</color>
 </resources>
