--- a/app/src/main/res/layout/activity_realizar_pedido.xml
+++ b/app/src/main/res/layout/activity_realizar_pedido.xml
@@ -302,6 +302,11 @@
 
                         <LinearLayout
                             android:layout_width="match_parent"
+                            android:orientation="vertical"
+                            android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:orientation="horizontal"
                             android:gravity="center"
                             android:layout_height="wrap_content">
@@ -330,6 +335,30 @@
                                 android:fontFamily="@font/futura"
                                 android:id="@+id/edtSocio"
                                 android:layout_height="wrap_content"/>
+                        </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_gravity="center"
+                                android:layout_height="match_parent">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:text="Socios afiliados : "
+                                    android:textColor="#000"
+                                    android:fontFamily="@font/futura"
+                                    android:layout_height="wrap_content"/>
+
+                                <Spinner
+                                    android:id="@+id/spinnerProveedor"
+                                    android:spinnerMode="dialog"
+                                    android:tooltipText="-"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+
+                            </LinearLayout>
+
                         </LinearLayout>
 
                         <LinearLayout
